--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.SplitTheBill"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.orderdetails.OrderDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.customerdetails.CustomerDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.bills.BillsScreen"
             android:exported="true">
             <intent-filter>
