--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:name=".presentation.customerdetails.CustomerDetailsActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.bills.BillsScreen"
+            android:name=".presentation.customers.CustomersBillsScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
