--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.SplitTheBill"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.orderdetails.OrderDetailsActivity"
+            android:name=".presentation.orderitemdetails.OrderItemDetailsActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.customerdetails.CustomerDetailsActivity"
