--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.SplitTheBill"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.orderitemdetails.OrderItemDetailsActivity"
             android:exported="false" />
         <activity
